fixed horizontal tabs on mobile

--- a/scss/1-abstracts/_mixins.scss
+++ b/scss/1-abstracts/_mixins.scss
@@ -79,14 +79,6 @@
 @mixin vertical-list {
     @include reset-list;
 
-    @include mobile {
-        overflow-x: scroll;
-
-        li {
-            display: table-cell;
-        }
-    }
-
     li {
         margin: 10px 0;
 
