--- a/scss/3-components/_button.scss
+++ b/scss/3-components/_button.scss
@@ -9,7 +9,7 @@
     font-size: #{$base-font-size - 2px};
     padding: 12px 25px;
     border-radius: 5px;
-    font-size: 20px;
+    font-size: 18px;
     border: 2px solid $black;
     transition: 0.3s ease-in !important;
     display: inline-block;
