--- a/scss/3-components/_tab.scss
+++ b/scss/3-components/_tab.scss
@@ -14,6 +14,11 @@
         font-size: 18px;
         font-weight: $weight-bold;
 
+        @include mobile {
+            font-size: 14px;
+            padding: 14px 20px 14px 0;
+        }
+
         &:hover {
             color: $purple;
         }
